--- a/ki_projects/org.kermeta.ki.kompren.compilation/pom.xml
+++ b/ki_projects/org.kermeta.ki.kompren.compilation/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.8.0</version>
+            <version>2.8.1</version>
         </dependency>
         <dependency>
             <groupId>fr.irisa.triskell</groupId>
@@ -85,7 +85,7 @@
             <plugin>
                 <groupId>org.kermeta.language</groupId>
                 <artifactId>language.compiler.mavenplugin</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.4.1-BETA5</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
