--- a/art2_projects/org.kermeta.art2.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.root/pom.xml
@@ -145,6 +145,13 @@
         </repository>
     </repositories>
 
+    <pluginRepositories>
+        <pluginRepository>
+            <id>plugin.scala-tools.org</id>
+            <name>Plugin Scala-tools Maven2 Repository</name>
+            <url>http://scala-tools.org/repo-releases</url>
+        </pluginRepository>
+    </pluginRepositories>
 
 
     <distributionManagement>
