--- a/kermeta_projects/fr.irisa.triskell.kermeta.model/pom.xml
+++ b/kermeta_projects/fr.irisa.triskell.kermeta.model/pom.xml
@@ -4,6 +4,7 @@
 	<groupId>fr.irisa.triskell.kermeta</groupId>
 	<artifactId>kermeta.model</artifactId>
 	<version>1.4.0</version>
+	<packaging>jar</packaging>
 	<name>Kermeta - Kermeta model</name>
 	<build>
 		<resources>
@@ -27,6 +28,39 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-jar-plugin</artifactId>
+		        <configuration>
+		          <archive>
+		            <manifestFile>META-INF/MANIFEST.MF</manifestFile>
+		          </archive>
+		        </configuration>
+		    </plugin>
+			<!-- <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.1.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-SymbolicName>fr.irisa.triskell.${project.artifactId}; singleton = true</Bundle-SymbolicName>
+                        <Bundle-Vendor>IRISA/INRIA</Bundle-Vendor>
+                        <Bundle-ClassPath>.</Bundle-ClassPath>
+                        <Export-Package>fr.irisa.triskell.kermeta.*</Export-Package>
+                        <Require-Bundle>
+                        	org.eclipse.core.runtime
+                        </Require-Bundle>
+                        <Import-Package>
+                        	!org.eclipse.core.runtime.*,
+                        	org.eclipse.emf.*,
+                        	org.osgi.framework,
+                        	org.slf4j.*;version="[1.5,2)"
+                        </Import-Package>
+                        <Bundle-ClassPath>.</Bundle-ClassPath>       
+                    </instructions>
+                </configuration>
+            </plugin>-->
 		</plugins>
 	</build>
 	<dependencies>
