add missing resources
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13864 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: a3f4c986faca0c319f1e5634b656ee5485900a4b

--- a/kermeta_projects/fr.irisa.triskell.kermeta.model/pom.xml
+++ b/kermeta_projects/fr.irisa.triskell.kermeta.model/pom.xml
@@ -16,6 +16,13 @@
 				<targetPath>../../target/filtered-sources/java</targetPath>
 				<directory>build/java</directory>
 			</resource>
+			<resource>
+				<directory>.</directory>
+				<includes>
+					<include>plugin.xml</include>
+					<include>plugin.properties</include>
+				</includes>
+			</resource>
 		</resources>
 		<sourceDirectory>target/filtered-sources/java</sourceDirectory>
 		<outputDirectory>build/class</outputDirectory>
