fixed: must not perform isVoid test in compiled mode.
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13890 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: df23ba4a8ebfb7bec62315baa0bb1e5eaaa1169b

--- a/ki_projects/org.kermeta.ki.kompren.compilation/pom.xml
+++ b/ki_projects/org.kermeta.ki.kompren.compilation/pom.xml
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>fr.irisa.triskell</groupId>
             <artifactId>kermeta.compilo.scala</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>0.0.2-BETA6</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
@@ -92,7 +92,7 @@
             <plugin>
                 <groupId>org.kermeta.language</groupId>
                 <artifactId>language.compiler.mavenplugin</artifactId>
-                <version>1.4.1-SNAPSHOT</version>
+                <version>1.4.1-BETA6</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
