added merger.mavenplugin to the build
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13924 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 06f03aa0d9bb8f83e2cd23e9d7c9d4768024a6b9

--- a/art2_projects/pom.xml
+++ b/art2_projects/pom.xml
@@ -45,6 +45,7 @@
         <module>org.kermeta.art2.framework.bus.jgroups</module>
         <module>org.kermeta.art2.deploy.osgi</module>
         <module>org.kermeta.art2.merger</module>
+        <module>org.kermeta.art2.merger.mavenplugin</module>
         <module>org.kermeta.art2.kompare</module>
         <module>org.kermeta.art2.platform.felix</module>
         <module>org.kermeta.art2.platform.standalone</module>
