Add documentation Improve metamodel
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13937 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 5668ffaba2911087132abe08801c06bcac755c13

--- a/art2_projects/org.kermeta.art2.model/pom.xml
+++ b/art2_projects/org.kermeta.art2.model/pom.xml
@@ -91,8 +91,9 @@
                             <instructions>
                                 <Export-Package>org.kermeta.art2,org.kermeta.art2.impl,org.kermeta.art2.util</Export-Package>
                                 <Bundle-SymbolicName>org.kermeta.art2.model</Bundle-SymbolicName>
-                                <Import-Package>org.eclipse.emf.*,org.osgi.framework</Import-Package>
+                                <Import-Package>!org.kermeta.art2.*,org.eclipse.emf.*,org.osgi.framework</Import-Package>
                                 <Bundle-ClassPath>.</Bundle-ClassPath>
+                                <Private-Package></Private-Package>
                         <!-- add extra element in the manifest, copy them from this file -->
                         <!--<_include>resources/META-INF/MANIFEST-part.MF</_include>-->
 
