git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13939 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 978068a6701f450226e82a6248868c20827f5739

--- a/art2_projects/org.kermeta.art2.framework.baseLib/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework.baseLib/pom.xml
@@ -47,7 +47,6 @@
 
 
                 <!-- android dex phase -->
-                <!--
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -62,9 +61,9 @@
                         <configuration>
                             <executable>${android.tools.dx}</executable>
                             <arguments>
-                                <argument>-dex</argument>
-                                <argument>-core-library</argument>
-                                <argument>-output=${project.build.directory}/classes.dex</argument>
+                                <argument>--dex</argument>
+                                <argument>--core-library</argument>
+                                <argument>--output=${project.build.directory}/classes.dex</argument>
                                 <argument>${project.build.directory}/${project.build.finalName}.jar</argument>
                             </arguments>
                         </configuration>
@@ -86,7 +85,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>-->
+            </plugin>
         </plugins>
     </build>
 
