--- a/art2_projects/org.kermeta.art2.platform.android/pom.xml
+++ b/art2_projects/org.kermeta.art2.platform.android/pom.xml
@@ -22,6 +22,12 @@
             <version>3.0.2</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.kermeta.art2.android</groupId>
+            <artifactId>org.kermeta.art2.android.framework</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -38,7 +44,7 @@
                             <goal>unpack-dependencies</goal>
                         </goals>
                         <configuration>
-                            <includeArtifactIds>org.apache.felix.main</includeArtifactIds>
+                            <includeArtifactIds>org.kermeta.art2.android.framework,org.apache.felix.main</includeArtifactIds>
                             <includes>**/*.class</includes>
                             <excludes>**/*.properties</excludes>
                             <failOnMissingClassifierArtifact>false</failOnMissingClassifierArtifact>
