use OS specific file separator
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14059 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 26584fdfe4bc57d6127f1690f71635cfa7ea1c0c

--- a/art2_projects/org.kermeta.art2.android.platform.bootstrap/pom.xml
+++ b/art2_projects/org.kermeta.art2.android.platform.bootstrap/pom.xml
@@ -23,6 +23,32 @@
         <android.tools.adb>${android.home}/tools/adb</android.tools.adb>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>windows.profile</id>
+            <activation>
+                <os>
+                    <family>Windows</family>
+                </os>
+            </activation>
+            <properties>
+                <file.separator>\</file.separator>
+            </properties>
+        </profile>
+        <profile>
+            <id>non.windows.profile</id>
+            <activation>
+                <os>
+                    <family>!Windows</family>
+                </os>
+            </activation>
+            <properties>
+                <file.separator>/</file.separator>
+            </properties>
+        </profile>
+    </profiles>
+
+
 
     <build>
         <plugins>
@@ -58,7 +84,7 @@
                                 <argument>${android.tools.dx}</argument>
                                 <argument>${android.tools.aapt}</argument>
                                 <argument>/mnt/sdcard/OSGI/bundle</argument>
-                                <argument>${project.build.directory}/lib</argument>
+                                <argument>${project.build.directory}${file.separator}lib</argument>
                             </arguments>
                         </configuration>
                     </execution>
