Added the possibility to register ecore packages from uml profile definition files
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14122 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 25b848ef0aaf33f49e7def474b900d351a7a6abf

--- a/registration_projects/org.eclipse.emf.ecoretools.registration.ui/plugin.xml
+++ b/registration_projects/org.eclipse.emf.ecoretools.registration.ui/plugin.xml
@@ -37,6 +37,28 @@
               menubarPath="org.eclipse.emf.ecoretools.registration.epackagesregistration.subMenu/emfregistration">
         </action>       
       </objectContribution>
+      <objectContribution
+            adaptable="true"
+            id="org.eclipse.emf.ecoretools.registration.umlregistration"
+            nameFilter="*.uml"
+            objectClass="org.eclipse.core.resources.IFile">
+         <action
+               class="org.eclipse.emf.ecoretools.registration.popup.actions.UMLRegisteringAction"
+               enablesFor="*"
+               icon="images/RegisterEcoreFile.gif"
+               id="org.eclipse.emf.ecoretools.registration.UMLRegister"
+               label="Register EPackages from UML profile file"
+               menubarPath="org.eclipse.emf.ecoretools.registration.umlepackagesregistration.subMenu/umlregistration">
+         </action>
+         <menu
+               id="org.eclipse.emf.ecoretools.registration.umlepackagesregistration.subMenu"
+               label="EPackages registration"
+               path="additions">
+            <separator
+                  name="umlregistration">
+            </separator>
+         </menu>
+      </objectContribution>
 	</extension>
 
    <extension
