Update pom dependencies
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@14124 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: b2c025162d87fb85f9ed3235fa1dcb97fbc95805

--- a/registration_projects/org.eclipse.emf.ecoretools.registration/pom.xml
+++ b/registration_projects/org.eclipse.emf.ecoretools.registration/pom.xml
@@ -56,6 +56,14 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.uml2.uml</artifactId>
+			<version>3.1.0</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		<dependency>
+			
+		</dependency>
 	</dependencies>
 	<repositories>        
         <repository>
@@ -72,6 +80,22 @@
 				<checksumPolicy>fail</checksumPolicy>
 			</snapshots>
 			<url>http://www.kermeta.org/maven2-snapshots</url>
+			<layout>default</layout>
+		</repository>
+        <repository>
+			<id>kermeta</id>
+			<name>Kermeta</name>
+			<releases>
+				<enabled>false</enabled>
+				<updatePolicy>always</updatePolicy>
+				<checksumPolicy>warn</checksumPolicy>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+				<checksumPolicy>fail</checksumPolicy>
+			</snapshots>
+			<url>http://www.kermeta.org/maven2</url>
 			<layout>default</layout>
 		</repository>
      </repositories>
