--- a/registration_projects/org.eclipse.emf.ecoretools.registration/pom.xml
+++ b/registration_projects/org.eclipse.emf.ecoretools.registration/pom.xml
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>org.kermeta.eclipse</groupId>
 			<artifactId>org.eclipse.uml2.uml</artifactId>
-			<version>3.1.0</version>
+			<version>3.1.0.v201006071150</version>
 			<type>jar</type>
 			<scope>compile</scope>			
 		</dependency>
