--- a/ki_projects/org.kermeta.ki.kompren.compilation/pom.xml
+++ b/ki_projects/org.kermeta.ki.kompren.compilation/pom.xml
@@ -67,7 +67,7 @@
         <dependency>
             <groupId>org.kermeta.language</groupId>
             <artifactId>language.framework.scala</artifactId>
-            <version>0.0.9</version>
+            <version>0.11.0-BETA</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
@@ -158,7 +158,7 @@
                             <mainClass>runner.MainRunner</mainClass>
           <!-- args are optional -->
                             <args>
-                                <arg>file:/home/ablouin/workspace/org.kermeta.ki.kompren/examples/Ecore.km</arg>
+                                <arg>file:/home/ablouin/workspace/org.kermeta.ki.kompren/examples/UML.km</arg>
                             </args>
                         </launcher>
                     </launchers>
